Development
    Optimize the menu slide away calls
    Updated Spanish translation by Surfaz Gemon Meme
    Add number of audio channels and video fps to property plugin
    Fix crasher if we can't open cover art file for writing
    Add bitrate to property page in nautilus
    Initial commit of nautilus property plugin 
        (enabled by default, use --enable-nautilus=no to disable)
    In all cases where mplayer is launched, use specified location if available, otherwise
        search path (which is the default)
    Try to detect if we can use the -volume option with mplayer
    Set right click menu preferences option to insensitve when fullscreen
    Fix volume setting
    Require mplayer to have the -volume command line option
    Update some labels on the config screen
    When selecting an ao other than alsa, disable the mixer selection dialog
    Rework mute functionality, so the icon is updated correctly
    When video has an ogm extension, set the demuxer to lavf, fixes audio switching issues
    Set Ctrl-L to be new hot key for open location (Gnome std)
    Set F9 to be new hot key for open playlist (Gnome std)
    Make open location window transient like preferences window
    Make advanced video window transient like preferences window
    Make preferences window transient to the main window and keep it above if the main window is
    Hook 'a' key to cycle thru the aspect ratios
    Remove disable_auto_hide and change to auto_hide_timeout, set <= 0 to disable, defaults to 3
    Add new hidden config option 'disable_auto_hide' when set true the controls don't slide away
    Rework the digital tv loader
    Updated Chinese (simplified) translation
    Added Japanese Translation by Munehiro Yamamoto
0.9.4
    Fix controls box visibility if exiting fullscreen mode while panel is sliding away
    Switch GIO async caching to use conditionals instead of locks