@@ -1,17 +1,20 @@
 [Desktop Entry]
 Version=1.0
 Name=GNOME MPlayer
+Name[fr]=GNOME MPlayer
 Name[sr]=Гномов Мплејер
 Name[sr@latin]=Gnomov Mplejer
 Name[tr]=GNOME MPlayer
 GenericName=Media Player
-GenericName[tr]=Çokluortam Oynatıcı
 GenericName[es]=Reproductor multimedia
+GenericName[fr]=Lecteur multimédia
+GenericName[tr]=Çokluortam Oynatıcı
 Comment=Play your media
+Comment[es]=Reproduce tus archivos multimedia
+Comment[fr]=Lire vos média
 Comment[sr]=Пуштање мултимедијалних датотека
 Comment[sr@latin]=Puštanje multimedijalnih datoteka
 Comment[tr]=Ses ve görüntü oynatıcı
-Comment[es]=Reproduce tus archivos multimedia
 Exec=gnome-mplayer
 Icon=gnome-mplayer
 StartupNotify=true
